[tool.poetry]
name = "lab2"
version = "0.1.0"
description = ""
authors = ["darleet <darleet@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.9.2"
mypy = "^1.13.0"
ruff = "^0.7.3"
black = "^24.10.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
